<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/name"
            android:inputType="textCapWords"/>

        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="10dp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:id="@+id/whipCream_checkbox"
            android:textSize="20sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="10dp"
           />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:id="@+id/choclate_checkbox"
            android:textSize="20sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:text="+"
                android:layout_marginBottom="10dp"
                android:onClick="increment"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_quantity_value"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:id="@+id/text"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:text="-"
                android:layout_marginBottom="10dp"
                android:onClick="decrement"
                />


        </LinearLayout>



<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="ORDER SUMMARY"-->
<!--            android:paddingBottom="18dp"-->
<!--            android:paddingTop="20dp"-->
<!--            android:textSize="28dp"-->
<!--            />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="$0"-->
<!--            android:paddingBottom="18dp"-->
<!--            android:textSize="28dp"-->
<!--            android:id="@+id/order_summary_textview"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/order"
            android:onClick="submitOrder"
            />

    </LinearLayout>
</ScrollView>